kubernetes/04-dpl-pytbak.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pytbak
    track: pytbak-stable
    tags.datadoghq.com/env: home-remote
    tags.datadoghq.com/service: pytbak
    tags.datadoghq.com/version: stable
  name: pytbak-stable
  namespace: pytbak
spec:
  minReadySeconds: 10
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: pytbak
      track: pytbak-stable
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      annotations:
        admission.datadoghq.com/python-lib.version: v2.4.0
        prometheus.io/path: /metrics
        prometheus.io/port: "5000"
        prometheus.io/scrape: "true"
      labels:
        admission.datadoghq.com/enabled: "true"
        app: pytbak
        track: pytbak-stable
        tags.datadoghq.com/env: home-remote
        tags.datadoghq.com/service: pytbak
        tags.datadoghq.com/version: stable
    spec:
      containers:
      - name: pytbak
        image: lgirardi/pytbak:v-52
        resources:
          limits:
            cpu: 300m
            memory: 250Mi
          requests:
            cpu: 30m
            memory: 125Mi
        ports:
        - name: http
          containerPort: 5000
